--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "rust-petclinic"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+members = [".", "entity", "migration"]
+
 [dependencies]
 axum = "0.5.6"
 hyper = { version = "0.14.19", features = ["full"] }
@@ -10,3 +13,6 @@ tokio = { version = "1.19.2", features = ["full"] }
 tower = "0.4.12"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+sea-orm = { version = "0.8.0", features = [ "runtime-tokio-native-tls", "sqlx-postgres" ] }
+entity = { path = "entity" }
+migration = { path = "migration" }
