--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,6 +11,7 @@ axum = "0.5.6"
 hyper = { version = "0.14.19", features = ["full"] }
 tokio = { version = "1.19.2", features = ["full"] }
 tower = "0.4.12"
+tower-http = { version = "0.3.4", features = ["cors"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 sea-orm = { version = "0.8.0", features = [ "runtime-tokio-native-tls", "sqlx-postgres" ] }
