--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,6 +14,6 @@ tower = "0.4.12"
 tower-http = { version = "0.3.4", features = ["cors"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-sea-orm = { version = "0.8.0", features = [ "runtime-tokio-native-tls", "sqlx-postgres" ] }
+sea-orm = { version = "0.8.0", features = [ "runtime-tokio-native-tls", "sqlx-sqlite" ] }
 entity = { path = "entity" }
 migration = { path = "migration" }
