--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sycamore = "0.7.1"
-sycamore-router = "0.7.1"
+sycamore = {version = "0.8.0-beta.7", features = ["suspense"] }
+sycamore-router = "0.8.0-beta.7"
 reqwasm = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 wasm-bindgen-futures = "0.4"
