--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,6 +10,7 @@ sycamore = {version = "0.8.0-beta.7", features = ["suspense"] }
 sycamore-router = "0.8.0-beta.7"
 reqwasm = "0.5"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 wasm-bindgen-futures = "0.4"
 
 [profile.release]
