--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 members = [".", "entity", "migration"]
 
 [dependencies]
-axum = "0.5.6"
+axum = { version = "0.5.6", features = ["headers"] }
 hyper = { version = "0.14.19", features = ["full"] }
 tokio = { version = "1.19.2", features = ["full"] }
 tower = "0.4.12"
@@ -17,3 +17,4 @@ serde_json = "1.0"
 sea-orm = { version = "0.8.0", features = [ "runtime-tokio-native-tls", "sqlx-sqlite" ] }
 entity = { path = "entity" }
 migration = { path = "migration" }
+jsonwebtoken = "8.1.1"
