--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dto = { path = "../dto" }
+chrono = { version = "0.4", features = ["serde"] }
 sycamore = {version = "0.8.0-beta.7", features = ["suspense"] }
 sycamore-router = "0.8.0-beta.7"
 reqwasm = "0.5"
-serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 wasm-bindgen-futures = "0.4"
 
