--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 members = [".", "entity", "migration"]
 
 [dependencies]
+dto = { path = "../dto" }
 axum = { version = "0.5.6", features = ["headers"] }
 hyper = { version = "0.14.19", features = ["full"] }
 tokio = { version = "1.19.2", features = ["full"] }
@@ -18,3 +19,4 @@ sea-orm = { version = "0.8.0", features = [ "runtime-tokio-native-tls", "sqlx-sq
 entity = { path = "entity" }
 migration = { path = "migration" }
 jsonwebtoken = "8.1.1"
+chrono = "0.4"
