Optimize server release profile

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,3 +20,9 @@ entity = { path = "entity" }
 migration = { path = "migration" }
 jsonwebtoken = "8.1.1"
 chrono = "0.4"
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
+opt-level = "z"
